@@ -15,7 +15,7 @@ _wajig()
               INSTALL INSTALLSUGGESTED INTEGRITY LARGE LASTUPDATE
               LISTALTERNATIVES LISTCACHE LISTCOMMANDS LISTDAEMONS LISTFILES
               LISTHOLD LISTINSTALLED LISTNAMES LISTPACKAGES LISTSCRIPTS
-              LISTSECTION LISTSECTIONS LISTSTATUS LOCALDISTUPGRADE LOCALUPGRADE
+              LISTSECTION LISTSECTIONS LISTSTATUS
               MADISON MOVE NEW NEWDETAIL NEWS NEWUPGRADES NONFREE ORPHANS
               POLICY PURGE PURGEORPHANS PURGEREMOVED RBUILDDEPS README
               RECDOWNLOAD RECOMMENDED RECONFIGURE REINSTALL RELOAD REMOVE
